--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "react-router": "^7.6.0"
   }
 }
