--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "driver.js": "^1.3.6",
     "emoji-picker-react": "^4.14.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
@@ -63,6 +64,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-joyride": "^2.0.2",
     "@types/sockjs-client": "^1.5.4",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
